[package]
name = "rust-colors-of-film"
version = "0.1.0"
authors = ["Florian Teich <fteich1@gwdg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.47.0"
indicatif = "0.16.0"
clap = "2.0.0"

[[bin]]
name = "rust-colors-of-film"
path = "main.rs"
